# SimuSearch

./: .env  .gitignore  README.md  SETUP.md  demo_agents.py  pyproject.toml  requirements.txt  setup.bat  setup.ps1  test_agents.py
agents/: __init__.py
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  base_agent.py  chat_wrappers.py
src/agents/core/: experimental_agent.py  theoretical_agent.py
src/communication/: protocol.py
tests/: test_communication_agent.py
